# TradeBot

./: .gitignore  conf.py  credentials.py  help.txt  pyproject.toml  run_swing_pipeline.sh  tw.txt  vcp.ipynb  vcp.txt
scripts/: run_nse_classification.sh  run_swing_pipeline.sh
src/: conf.py  utils.py
src/brokers/: base.py  kite.py  kite_broker.py  nse_broker.py  polygon_broker.py
src/brokers/kite/: conf.ini  exceptions.py  historical.py  instruments.py  kite.py  login.py  portfolio.py
src/brokers/nse/: conf.py  industry.py  scrap.py  test.ipynb
src/brokers/polygon/: api.py  historical.py  instruments.py  login.py
src/config/: data_source.py  exchange.py  exchange_tables.py  market.py  market_exchange.py  markets.py  run_modes.py  scans.py  storage_layout.py
src/config/brokers/: kite.py  nse.py  polygon.py
src/data_source/chartsmaze/: helper.py  sectors.py
src/jobs/: fetch_nse_classification.py  fetch_nse_hist.py  make_dir.py  nse_analysis.py  nse_classification.py  run_filter_scan.py  run_swing_scan.py  scanner.py  test_scanner.py
src/notebooks/: cmaze_indsutry.ipynb  kite_ptf.ipynb  nse_breath.ipynb  nse_industry.ipynb  nse_scans.ipynb
src/scans/: conf.py  filter_scan.py  swing_scan.py
