[project]
name = "tradebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "kiteconnect>=5.0.1",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pyotp>=2.9.0",
    "ratelimit>=2.2.1",
    "ruff>=0.14.9",
    "selenium>=4.39.0",
]
